--- a/yabause/src/port/qt/resources/resources.qrc
+++ b/yabause/src/port/qt/resources/resources.qrc
@@ -30,6 +30,7 @@
         <file>icons/actions/screenshot.png</file>
         <file>icons/actions/settings.png</file>
         <file alias="sound.png">icons/actions/sound.png</file>
+        <file>icons/actions/stv.png</file>
         <file>icons/actions/transfert.png</file>
         <file>icons/actions/video.png</file>
         <file alias="3dcontroller.png">icons/3dcontroller.png</file>
