--- a/yabause/src/port/qt/ui/UISettings.ui
+++ b/yabause/src/port/qt/ui/UISettings.ui
@@ -706,6 +706,16 @@
          </property>
         </widget>
        </item>
+       <item row="5" column="0">
++        <widget class="QLabel" name="lCartridgeSTVPath">
++         <property name="text">
++          <string>Mame romset 0.269:</string>
++         </property>
++         <property name="visible">
++          <bool>false</bool>
++        </property>
++        </widget>
++       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="wInput">
