Setup CTRL+A for STV

--- a/yabause/src/port/qt/ui/UIYabause.ui
+++ b/yabause/src/port/qt/ui/UIYabause.ui
@@ -883,7 +883,7 @@
     <string>Select Cartridge...</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+I</string>
+    <string>Ctrl+A</string>
    </property>
   </action>
   <action name="aHelpReport">
